--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="navbar-header"><button data-toggle="collapse" data-target="#myNavBar" type="button" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand" href="" data-target="blank">La Martiniere College</a></div>
         <div class="collapse navbar-collapse" id="myNavBar">
             <ul class="nav navbar-nav">
-                <li><a href="#campaslife">Campus Life</a></li>
+                <li><a href="#campus_life">Campus Life</a></li>
                 <li><a href="#achivements">Achivements</a></li>
                 <li><a href="#new">What's New</a></li>
                 <li><a href="#alumni">Alumni</a></li>
